--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "main": "index.js",
   "dependencies": {
     "request": "2.58.0",
+    "twit": "2.1.0",
+    "phantom": ">= 0.7.2",
     "lodash": ">= 3.10.1",
-    "temp": ">= 0.8.3"
+    "temp": ">= 0.8.3",
+    "cheerio": ">= 0.19.0",
+    "redis": ">= 2.0.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
