--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lodash": ">= 3.10.1",
     "temp": ">= 0.8.3",
     "cheerio": ">= 0.19.0",
-    "redis": ">= 2.0.1"
+    "redis": ">= 2.0.1",
+    "mysql": ">= 2.9.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
