--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "redis": ">= 2.0.1",
     "mysql": ">= 2.9.0",
     "minimist": ">= 1.2.0",
-    "queneau-buckets": ">= 1.0.1"
+    "iscool": "1.1.10"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
