--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "moment": ">= 2.10.6",
     "tumblrwks": ">= 0.2.0",
     "temp": ">= 0.8.3",
-    "express": ">= 4.13.3"
+    "express": ">= 4.13.3",
+    "wordfilter": ">= 0.2.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
