--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "request": "2.58.0",
-    "twit": "2.1.0",
-    "phantom": ">= 0.7.2",
-    "lodash": ">= 3.10.1",
-    "temp": ">= 0.8.3",
     "cheerio": ">= 0.19.0",
-    "redis": ">= 2.0.1",
-    "mysql": ">= 2.9.0",
+    "express": ">= 4.13.3",
+    "lodash": ">= 3.10.1",
     "minimist": ">= 1.2.0",
     "moment": ">= 2.10.6",
-    "tumblrwks": ">= 0.2.0",
+    "mysql": ">= 2.9.0",
+    "redis": ">= 2.0.1",
+    "request": "2.58.0",
     "temp": ">= 0.8.3",
-    "express": ">= 4.13.3",
-    "wordfilter": ">= 0.2.4"
+    "tumblrwks": ">= 0.2.0",
+    "twit": "2.1.0",
+    "wordfilter": ">= 0.2.4",
+    "puppeteer": "^1.0.0",
+    "yargs": "^8.0.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
