--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "cheerio": ">= 0.19.0",
-    "express": ">= 4.13.3",
-    "lodash": ">= 3.10.1",
+    "cheerio": "^0.22.0",
+    "express": "^4.16.4",
+    "lodash": "^4.17.11",
     "minimist": ">= 1.2.0",
-    "moment": ">= 2.10.6",
-    "mysql": ">= 2.9.0",
+    "moment": "^2.24.0",
+    "mysql": "^2.16.0",
+    "puppeteer": "^1.0.0",
     "redis": ">= 2.0.1",
-    "request": "2.58.0",
+    "request": "^2.88.0",
     "temp": ">= 0.8.3",
     "tumblrwks": ">= 0.2.0",
-    "twit": "2.1.0",
+    "twit": "^2.2.11",
     "wordfilter": ">= 0.2.4",
-    "puppeteer": "^1.0.0",
     "yargs": "^8.0.2"
   },
   "scripts": {
