--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "main": "index.js",
   "dependencies": {
     "cheerio": "^0.22.0",
-    "express": "^4.16.4",
     "lodash": "^4.17.11",
     "minimist": ">= 1.2.0",
     "moment": "^2.24.0",
-    "mysql": "^2.16.0",
+    "mysql2": "^2.3.3",
     "puppeteer": "^15.4.0",
     "redis": ">= 2.0.1",
     "request": "^2.88.0",
